# ipkvm-watch

./: .gitignore  LICENSE  README.md  go.mod  go.sum  indicators.go  indicators.yaml  main.go  network_discovery.go  network_query.go  network_test.py  pyproject.toml  usb_checks.py  usb_discovery.go
.github/workflows/: build_release.yaml
_device_output/: comet_lsusb  comet_windows  jetkvm_lsusb  mac_glkvm
cmd/ipkvm-watch/: indicators.go  main.go  network_discovery.go  network_query.go  usb_discovery.go
