[tool.poetry]
name = "ipkvm-watch"
version = "0.1.0"
description = ""
authors = ["Jeremy Mill <jeremymill@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"
mmh3 = "^5.2.0"
requests = "^2.32.5"
pyopenssl = "^25.3.0"
lxml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

